tests/errors/BadIntroductionDesignator.java
package errors;

// PR#129

public class BadIntroductionDesignator {
	introduction (M||) {
		public boolean m_foo;
	}
}

class M {}
